[workspace]
resolver = "2"
members = [
    "radius-sdk",
    "crates/block-commitment",
    "crates/context",
    "crates/json-rpc",
    "crates/kvstore",
    "crates/kvstore-macros",
    "crates/liveness-radius",
    "crates/signature",
    "crates/validation-eigenlayer",
    "crates/validation-symbiotic",
]

[workspace.dependencies]
alloy = { version = "0.2", default-features = false }
bincode = "1.3"
const-hex = "1.12"
futures = "0.3"
pin-project = "1.1"
rand = "0.8"
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.0", default-features = false }

proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.37", default-features = false }
syn = { version = "2.0.79", default-features = false }