[package]
name = "radius-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
block-commitment = { path = "../crates/block-commitment", optional = true }
context = { path = "../crates/context", optional = true }
json-rpc = { path = "../crates/json-rpc", optional = true }
kvstore = { path = "../crates/kvstore", optional = true, default-features = false }
kvstore-macros = { path = "../crates/kvstore-macros", optional = true }
liveness-radius = { path = "../crates/liveness-radius", default-features = false, optional = true }
signature = { path = "../crates/signature", optional = true }
validation-eigenlayer = { path = "../crates/validation-eigenlayer", default-features = false, optional = true }
validation-symbiotic = { path = "../crates/validation-symbiotic", default-features = false, optional = true }

[features]
full = ["dep:block-commitment", "dep:context", "dep:json-rpc", "kvstore/json", "dep:liveness-radius", "dep:signature", "dep:validation-eigenlayer", "dep:validation-symbiotic"]
context = ["dep:context"]
json-rpc = ["dep:json-rpc"]
kvstore-bytes = ["kvstore/bytes", "dep:kvstore-macros"]
kvstore-json = ["kvstore/json", "dep:kvstore-macros"]
liveness-radius = ["dep:liveness-radius"]
signature = ["dep:signature"]
validation-eigenlayer = ["dep:validation-eigenlayer"]
validation-symbiotic = ["dep:validation-symbiotic"]