[package]
name = "radius-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../crates/context", optional = true }
json-rpc-client = { path = "../crates/json-rpc/json-rpc-client", optional = true }
json-rpc-server = { path = "../crates/json-rpc/json-rpc-server", optional = true }
kvstore = { path = "../crates/kvstore/kvstore", optional = true, default-features = false }
kvstore-macros = { path = "../crates/kvstore/kvstore-macros", optional = true }
liveness-radius = { path = "../crates/liveness/liveness-radius", default-features = false, optional = true }
signature = { path = "../crates/signature", optional = true }
validation-eigenlayer = { path = "../crates/validation/validation-eigenlayer", default-features = false, optional = true }
validation-symbiotic = { path = "../crates/validation/validation-symbiotic", default-features = false, optional = true }

libc = "0.2"

[features]
full = [
    "dep:context",
    "kvstore/json",
    "dep:liveness-radius",
    "dep:json-rpc-client",
    "dep:json-rpc-server",
    "dep:signature",
    "dep:validation-eigenlayer",
    "dep:validation-symbiotic",
]
context = ["dep:context"]
json-rpc-client = ["dep:json-rpc-client"]
json-rpc-server = ["dep:json-rpc-server"]
kvstore-bytes = ["kvstore/bytes", "dep:kvstore-macros"]
kvstore-json = ["kvstore/json", "dep:kvstore-macros"]
liveness-radius = ["dep:liveness-radius"]
signature = ["dep:signature"]
validation-eigenlayer = ["dep:validation-eigenlayer"]
validation-symbiotic = ["dep:validation-symbiotic"]