[package]
name = "radius-sequencer-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../sdk/context", optional = true }
json-rpc = { path = "../sdk/json-rpc", optional = true }
kvstore = { path = "../sdk/kvstore", optional = true }
liveness-evm = { path = "../sdk/liveness-evm", default-features = false, optional = true }
validation-eigenlayer = { path = "../sdk/validation-eigenlayer", default-features = false, optional = true }

[features]
full = ["dep:context", "dep:json-rpc", "dep:kvstore"]
context = ["dep:context"]
json-rpc = ["dep:json-rpc"]
kvstore = ["dep:kvstore"]
liveness-evm = ["dep:liveness-evm"]
validation-eigenlayer = ["dep:validation-eigenlayer"]