[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true, optional = true }
rocksdb = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { workspace = true, features = ["sync"] }

[features]
default = ["dep:serde_json"]
bytes = ["dep:bincode"]
json = ["dep:serde_json"]