[package]
name = "signature"
version = "0.1.0"
edition = "2021"

[dependencies]
const-hex = "1.12"
ed25519-dalek = "2.1"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10"

alloy = { version = "0.2", features = ["signer-local"] }