[package]
name = "signature"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
alloy = { version = "0.2", features = ["signer-local"] }

[dependencies]
bincode = { workspace = true }
const-hex = "1.12"
ed25519-dalek = "2.1"
itoa = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10"